@@ -3,3 +3,4 @@ databa_ojdbc_javaFx
 ### Java Libraries:
 * ojdbc7
 * javaFx_12
+* intellji VM Option --module-path C:\Users\saguoran\lib\javafx-sdk-11.0.2\lib --add-modules javafx.controls,javafx.fxml
